--- a/src/app/styles/galleryWindow.styl
+++ b/src/app/styles/galleryWindow.styl
@@ -111,7 +111,7 @@ loaderSize = 24px
 		width: 360px
 		padding: 12px 24px
 		border-radius: 6px
-		border: 2px solid colorPrimary
+		box-shadow: #fafafa 0px 0px 1px 1px
 		background-color: colorWhite
 		opacity: 0.0
 		visibility: hidden
